--- a/FrontCode/index.html
+++ b/FrontCode/index.html
@@ -17,13 +17,14 @@
                 <button @click="disableContext" style="height: 30px; width: 120px;">关闭上下文功能</button>
                 <button @click="closeModal" style="height: 30px; width: 120px;">知道啦知道啦</button>
             </div>
-        </div>        
+        </div>
 
         <div class="model-selection-container">
             <label for="modelSelection">选择模型：</label>
             <select id="modelSelection" v-model="selectedModel">
-                <option value="model-qwen" selected>Qwen-7B-Chat</option>
-                <option value="model-mpt7">MPT-7B</option>
+                <option value="model-1" selected>公积金专员</option>
+                <option value="model-2">Qwen-7B-Chat</option>
+                <option value="model-3">MPT-7B</option>
             </select>
             <label for="contextSize">上下文长度：</label>
             <input type="number" id="contextSize" v-model.number="contextLength" min="1" max="10" value="5">
@@ -31,20 +32,33 @@
 
         <div class="chat-container">
             <div v-for="(message, index) in messages" :key="index"
-            :class="{'message-right': message.type === 'question', 'message-left': message.type === 'answer' || message.type === 'current'}">
+                :class="{'message-right': message.type === 'question', 'message-left': message.type === 'answer' || message.type === 'current'}">
                 <div class="message-content">{{ message.text }}</div>
             </div>
         </div>
 
         <div class="input-container">
-            <input type="text" v-model="newQuestion" @keyup.enter="sendQuestion" placeholder="Type a question..." ref="questionInput">
+            <div id="box">{{ translatedText }}</div>
+            <input type="text" v-model="newQuestion" @keyup.enter="sendQuestion" placeholder="Type a question..."
+                ref="questionInput">
             <button @click="sendQuestion" :disabled="sending" :class="{ 'button-disabled': sending }">Send</button>
             <span v-show="sending" class="replying-label"></span>
+
+            <!-- <button @click="startRecord">开启</button>
+            <button @click="endRecord">停止</button> -->
+            <div v-if="recordershowModal" class="recordershowModal">收声中...</div>
+            <button @click="toggleRecording">
+                {{ isRecording ? '结束收声' : '按下收声' }}
+              </button>
+            <button @click="playRecord" :class="{'disabled': !hasRecording}" :disabled="!hasRecording">播放录音-{{recordingDuration}}s</button>
+            <!-- <button @click="transRecord">上传翻译</button> -->
         </div>
     </div>
 
-    <script src="https://cdn.jsdelivr.net/npm/vue@2"></script>
+    <!--<script src="https://cdn.jsdelivr.net/npm/vue@2"></script>-->
+    <script src="vue@2.js"></script>
     <script src="app.js"></script>
+    <script src="recorder.js"></script>
 </body>
 
 </html>
