--- a/FrontCode/ChatMemoindex.html
+++ b/FrontCode/ChatMemoindex.html
@@ -17,7 +17,7 @@
         <div class="chat-container" data-page="2">
             <div v-for="(message, index) in messages" :key="index"
                 :class="{'message-right': message.type === 'question', 'message-left': message.type === 'answer' || message.type === 'current'}">
-                <div class="message-content">{{ message.text }}</div>
+                <div class="message-content" style="white-space: pre-wrap;">{{ message.text }}</div>
             </div>
         </div>
 
